--- a/public/index.html
+++ b/public/index.html
@@ -4,129 +4,214 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>台灣股市查詢系統</title>
-    <!-- 引入 Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #f8f9fa;
+            background-color: #f4f6f8;
+            font-family: 'Arial', sans-serif;
         }
-        .table th, .table td {
-            vertical-align: middle;
+
+        .container {
+            margin-top: 50px;
+        }
+
+        .header {
+            background-color: #007bff;
+            color: white;
+            padding: 20px;
+            border-radius: 8px;
             text-align: center;
         }
-        .table thead {
+
+        .form-group {
+            margin-bottom: 1.5rem;
+        }
+
+        .btn-primary {
+            background-color: #28a745;
+            border-color: #28a745;
+        }
+
+        .btn-primary:hover {
+            background-color: #218838;
+            border-color: #1e7e34;
+        }
+
+        table {
+            margin-top: 30px;
+        }
+
+        th, td {
+            text-align: center;
+            vertical-align: middle;
+        }
+
+        th {
             background-color: #007bff;
             color: white;
         }
-        .btn-primary {
-            background-color: #007bff;
-            border-color: #007bff;
+
+        .text-danger {
+            color: #dc3545;
         }
-        .btn-primary:hover {
-            background-color: #0056b3;
-            border-color: #004085;
+
+        .text-success {
+            color: #28a745;
         }
-        .card {
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+        .table-striped tbody tr:nth-of-type(odd) {
+            background-color: #f8f9fa;
+        }
+
+        .table-bordered th, .table-bordered td {
+            border: 1px solid #dee2e6;
+        }
+
+        .footer {
+            background-color: #343a40;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            margin-top: 30px;
+            border-radius: 8px;
+        }
+
+        .result-container {
+            margin-top: 20px;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 15px;
+            }
+            .header, .footer {
+                padding: 15px;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="container mt-5">
-        <div class="card p-4">
-            <h1 class="text-center text-primary mb-4">台灣股市查詢系統</h1>
-            <form id="stockForm">
-                <div class="row">
-                    <div class="col-md-6 mb-3">
-                        <label for="stockSymbol" class="form-label">股票代號</label>
-                        <input type="text" id="stockSymbol" class="form-control" placeholder="例如：2330 (台積電)">
-                    </div>
-                    <div class="col-md-6 mb-3">
-                        <label for="stockDate" class="form-label">查詢日期</label>
-                        <input type="date" id="stockDate" class="form-control">
-                    </div>
-                </div>
-                <div class="text-center">
-                    <button type="submit" class="btn btn-primary btn-lg">查詢</button>
-                </div>
-            </form>
+    <div class="container">
+        <div class="header">
+            <h1>台灣股市查詢系統</h1>
+            <p>請輸入股票代號查詢最新股市資料</p>
         </div>
-        <div id="result" class="mt-5"></div>
+
+        <form id="queryForm">
+            <div class="form-group">
+                <label for="stockSymbol" class="form-label">股票代號</label>
+                <input type="text" id="stockSymbol" class="form-control" placeholder="例如：2330" required>
+            </div>
+            <button type="submit" class="btn btn-primary">查詢</button>
+        </form>
+
+        <div id="result" class="result-container"></div>
+
+        <div id="stockHistory" class="mt-5">
+            <h4>查詢過的股票代號：</h4>
+            <table class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>股票代號</th>
+                        <th>公司名稱</th>
+                        <th>日期</th>
+                        <th>開盤價</th>
+                        <th>最高價</th>
+                        <th>最低價</th>
+                        <th>收盤價</th>
+                    </tr>
+                </thead>
+                <tbody id="historyList"></tbody>
+            </table>
+        </div>
+
+        <div class="footer">
+            <p>© 2024 台灣股市查詢系統 - 由 ChatGPT 提供協助</p>
+        </div>
     </div>
 
-    <!-- 引入 Bootstrap JS -->
     <script>
-        // 工具函數：取得今天日期 (YYYY-MM-DD 格式)
-        function getToday() {
-            const today = new Date();
-            const year = today.getFullYear();
-            const month = String(today.getMonth() + 1).padStart(2, '0');
-            const day = String(today.getDate()).padStart(2, '0');
-            return `${year}-${month}-${day}`;
-        }
+        // 在表單提交時處理查詢
+        document.getElementById('queryForm').addEventListener('submit', async (event) => {
+            event.preventDefault(); // 阻止表單默認行為
 
-        // 初始化表單的預設值
-        window.onload = function () {
-            document.getElementById('stockSymbol').value = '2330';
-            document.getElementById('stockDate').value = getToday();
-        };
-
-        // 表單提交處理
-        document.getElementById('stockForm').addEventListener('submit', async function (event) {
-            event.preventDefault(); // 阻止表單默認提交
-
-            const stockSymbol = document.getElementById('stockSymbol').value || '2330'; // 預設2330
-            const stockDate = document.getElementById('stockDate').value.replace(/-/g, '') || getToday().replace(/-/g, ''); // 預設今天
-
+            const symbol = document.getElementById('stockSymbol').value;
             const resultDiv = document.getElementById('result');
-            resultDiv.innerHTML = '<div class="text-center"><div class="spinner-border text-primary" role="status"><span class="visually-hidden">查詢中...</span></div></div>';
+            resultDiv.innerHTML = '<p>查詢中...</p>';
 
             try {
-                const response = await fetch(`/tw-stock/${stockSymbol}?date=${stockDate}`);
+                const response = await fetch(`/api/stock-price/${symbol}`);
                 const data = await response.json();
 
                 if (data.error) {
-                    resultDiv.innerHTML = `<div class="alert alert-danger text-center" role="alert">${data.error}</div>`;
+                    resultDiv.innerHTML = `<p class="text-danger">${data.error}</p>`;
                 } else {
-                    const reversedData = data.data.reverse();
-                    resultDiv.innerHTML = `
-                        <div class="card p-4">
-                            <h3 class="text-center text-primary">查詢結果</h3>
-                            <p><strong>股票代碼：</strong>${data.stock}</p>
-                            <p><strong>日期：</strong>${data.date}</p>
-                            <div class="table-responsive">
-                                <table class="table table-striped table-bordered mt-3">
-                                    <thead>
-                                        <tr>
-                                            <th>日期</th>
-                                            <th>成交股數</th>
-                                            <th>成交金額</th>
-                                            <th>開盤價</th>
-                                            <th>最高價</th>
-                                            <th>最低價</th>
-                                            <th>收盤價</th>
-                                            <th>漲跌價差</th>
-                                            <th>成交筆數</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        ${reversedData.map(row => `
-                                            <tr>
-                                                ${row.slice(0, 7).map(cell => `<td>${cell}</td>`).join('')}
-                                                <td style="color: ${parseFloat(row[7]) > 0 ? 'red' : 'green'}; font-weight: bold;">${row[7]}</td>
-                                                <td>${row[8]}</td>
-                                            </tr>`).join('')}
-                                    </tbody>
-                                </table>
-                            </div>
-                        </div>
-                    `;
+                    resultDiv.innerHTML = `<p>${data.result}</p>`;
                 }
+
+                // 使用 sessionStorage 儲存股票代號和股市資料
+                let stocks = JSON.parse(sessionStorage.getItem('stockHistory')) || [];
+                if (!stocks.some(stock => stock.symbol === symbol)) {
+                    stocks.push({
+                        symbol: symbol,
+                        result: data.result
+                    });
+                    sessionStorage.setItem('stockHistory', JSON.stringify(stocks));
+                }
+
+                // 顯示所有查詢過的股票代號和股市資料
+                displayStockHistory();
             } catch (error) {
-                resultDiv.innerHTML = `<div class="alert alert-danger text-center" role="alert">無法取得資料，請稍後再試。</div>`;
-                console.error('API 請求錯誤:', error);
+                resultDiv.innerHTML = `<p class="text-danger">無法查詢數據，請稍後再試。</p>`;
             }
         });
+
+        // 顯示查詢過的股票代號和股市資料
+        function displayStockHistory() {
+            const historyList = document.getElementById('historyList');
+            const stocks = JSON.parse(sessionStorage.getItem('stockHistory')) || [];
+            historyList.innerHTML = ''; // 清空歷史紀錄
+
+            stocks.forEach(stock => {
+                // 確保 stock.result 存在且為有效字符串
+                if (stock.result && typeof stock.result === 'string') {
+                    const resultMatch = stock.result.match(/^(.*?)\s*\((\d+)\)\s*日期:\s*(\d{8}),\s*開盤:\s*([0-9,.]+),\s*最高:\s*([0-9,.]+),\s*最低:\s*([0-9,.]+),\s*收盤:\s*([0-9,.]+)/);
+                    if (resultMatch) {
+                        const [, companyName, stockSymbol, date, open, high, low, close] = resultMatch;
+
+                        // 格式化日期為 YYYY/MM/DD
+                        const formattedDate = formatDate(date);
+
+                        const row = document.createElement('tr');
+                        row.innerHTML = `
+                            <td>${stockSymbol}</td>
+                            <td>${companyName}</td>
+                            <td>${formattedDate}</td>
+                            <td>${open}</td>
+                            <td>${high}</td>
+                            <td>${low}</td>
+                            <td class="${parseFloat(close) > parseFloat(open) ? 'text-danger' : 'text-success'}">${close}</td>
+                        `;
+                        historyList.appendChild(row);
+                    } else {
+                        console.error('股市資料格式不正確:', stock.result);
+                    }
+                } else {
+                    console.error('無效的股市資料:', stock.result);
+                }
+            });
+        }
+
+        // 日期格式化函數，將 YYYYMMDD 轉換為 YYYY/MM/DD
+        function formatDate(date) {
+            const year = date.slice(0, 4);
+            const month = date.slice(4, 6);
+            const day = date.slice(6, 8);
+            return `${year}/${month}/${day}`;
+        }
+
+        // 頁面加載時顯示已有的歷史紀錄
+        window.onload = displayStockHistory;
     </script>
 </body>
 </html>
